--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,162 @@
 :root {
-  --icon-width: 20px;
-  --icon-height: 20px;
+  --icon-width: 28px;
+  --icon-height: 28px;
   --text-color: #f0f9ff;
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+
+
+.container {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  grid-template-rows: 1fr 6fr;
+  height: 100vh;
+  background-color: red;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 600;
+}
+
+/* Navigation Styling (left/sidebar) */
+nav {
+  color: var(--text-color);
+  background-color: #3b82f6;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  box-sizing: border-box;
+  
+}
+
+
+.sidebar {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 6fr 4fr;
+  padding-right: 15px;
+  padding-top: 15px;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.sidebar-head {
+  display: flex;
+  margin-left: 15px;
+}
+
+.test {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  
+}
+
+.head-title {
+  font-size: 1.5rem;
+  margin-bottom: 4px;
+}
+/*
+.sidebar-top {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  align-items: end;
+}
+*/
+/*
+.sidebar-bottom {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  align-items: end;
+  border: 3px solid green;
+}
+*/
+
+.sidebar-top {
+  margin-top: 25px;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.sidebar-bottom {
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.sidebar-cell-logo {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  
+}
+
+.flex-box {
+  
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 25px;
+}
+
+.sidebar-cell-logo img {
+  height: var(--icon-height);
+  width: var(--icon-width);
+}
+
+.sidebar-cell {
+  font-size: 1.2rem;
+}
+
+/* Header Styling*/
+.header {
+  background-color: #000;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.header-top {
+  display: grid;
+  background-color: white;
+}
+
+.search {
+  background-color: blue;
+  display: flex;
+  
+  align-items: center;
+}
+
+.search-logo {
+  padding: 15px;
+  border: 1px solid green;
+}
+
+.search-logo img {
+  width: var(--icon-width);
+  height: var(--icon-height);
+}
+
+.search-bar{
+  
+}
+
+.search-bar input[type="search"] {
+  border-radius: 3px;
+  width: 500px;
 }
