--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+
 :root {
   --icon-width: 28px;
   --icon-height: 28px;
-  --text-color: #f0f9ff;
+  --white-color: #f0f9ff;
+  --blue-color: #3b82f6;
 }
 
 * {
@@ -12,18 +14,18 @@
 
 .container {
   display: grid;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr 6fr;
   height: 100vh;
-  background-color: red;
+
   font-family: 'Noto Sans', sans-serif;
   font-weight: 600;
 }
 
 /* Navigation Styling (left/sidebar) */
 nav {
-  color: var(--text-color);
-  background-color: #3b82f6;
+  color: var(--white-color);
+  background-color: var(--blue-color);
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   box-sizing: border-box;
@@ -41,7 +43,7 @@ nav {
 
 .sidebar a {
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--white-color);
 }
 
 .sidebar-head {
@@ -59,29 +61,12 @@ nav {
 
 .head-title {
   font-size: 1.5rem;
-  margin-bottom: 4px;
 }
-/*
-.sidebar-top {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  align-items: end;
+
+.head-logo {
+  width: 48px;
+  height: 48px;
 }
-*/
-/*
-.sidebar-bottom {
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  align-items: end;
-  border: 3px solid green;
-}
-*/
 
 .sidebar-top {
   margin-top: 25px;
@@ -120,43 +105,124 @@ nav {
   font-size: 1.2rem;
 }
 
+a:hover {
+  color: #f0f9ff54;
+}
+
 /* Header Styling*/
+
+header {
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  z-index: 0;
+}
 .header {
-  background-color: #000;
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
-}
+  background-color: var(--white-color);
 
-.header-top {
   display: grid;
-  background-color: white;
-}
-
-.search {
-  background-color: blue;
-  display: flex;
+  grid-template-columns: 2.1fr 1fr;
+  grid-template-rows: 1.5fr 2fr;
+  padding-left: 30px;
   
+  
+}
+
+.header-top-left {
+
+  display: grid;
+  grid-template-columns: 0.2fr 9fr;
   align-items: center;
+  vertical-align: middle;
+  padding-top: 15px;
+  padding-right: 50px;
+  
+  gap: 10px;
 }
 
-.search-logo {
-  padding: 15px;
-  border: 1px solid green;
-}
-
-.search-logo img {
+.header-icon {
   width: var(--icon-width);
   height: var(--icon-height);
 }
 
-.search-bar{
+input {
+  border-radius: 25px;
+  border: none;
+  background-color: rgb(233, 238, 255);
+  padding: 8px 10px;
+  font-size: 14px;
   
 }
 
-.search-bar input[type="search"] {
-  border-radius: 3px;
-  width: 500px;
+.header-top-right {
+  display: grid;
+  grid-template-columns: 0.3fr 0.4fr 1fr;
+  justify-items: center;
+  align-items: center;
+  padding-top: 15px;
+  margin-right: 100px;
+  margin-left: 75px;
+  width: 300px;
+  
+}
+
+
+.avatar-small {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  
+}
+
+.header-bottom-left {
+  display: grid;
+  grid-template-columns: 0.5fr 5fr;
+  grid-template-rows: auto;
+  
+}
+
+.avatar-big {
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+}
+
+.header-bottom-right {
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  width: 400px;
+  
+}
+
+button {
+  background-color: var(--blue-color);
+  border: none;
+  border-radius: 100px;
+  padding: 8px 6px 10px 6px;
+  width: 100px;
+  font-weight: 700;
+  color: var(--white-color); 
+}
+
+button:hover {
+  background-color: #3b83f6be;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: #3b83f681;
+}
+
+/* Main Content Section */
+
+
+.main-content {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  height: 100%;
+  background-color: rgb(233, 238, 255);
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: auto;
 }
