--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 :root {
   --icon-width: 28px;
   --icon-height: 28px;
-  --white-color: #f0f9ff;
+  --white-color: white;
   --blue-color: #3b82f6;
 }
 
@@ -176,7 +176,7 @@ input {
   display: grid;
   grid-template-columns: 0.5fr 5fr;
   grid-template-rows: auto;
-  
+  gap: 20px;
 }
 
 .avatar-big {
@@ -218,11 +218,103 @@ button:active {
 
 
 .main-content {
-  grid-row: 2 / 3;
   grid-column: 2 / 3;
-  height: 100%;
+  grid-row: 2 / 3;
   background-color: rgb(233, 238, 255);
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 3fr 1.5fr;
   grid-template-rows: auto;
+  padding: 25px 0;
+  gap: 25px;
+}
+
+.main-content-left {
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: .1fr 1fr 1fr 1fr;
+  height: 100%;
+  gap: 25px;
+  margin-left: 25px;
+}
+
+.main-content-title {
+  grid-column: span 2;
+  font-weight: 700;
+}
+
+.main-project {
+  border-left: 5px solid rgba(255, 166, 0, 0.875);
+  border-radius: 6px;
+
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  background-color: white;
+
+  justify-content: space-between;
+  align-items: start;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
+
+  font-size: 0.6rem;
+  font-weight: 200;
+  padding-top: 20px;
+  
+}
+
+.main-project-text {
+  width: 80%;
+  padding-left: 25px;
+  padding-top: 10px;
+}
+
+.main-project-text h4 {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.main-project-text p {
+  font-size: 0.7rem;
+  color: rgb(58, 58, 58);
+  font-weight: 500;
+}
+
+.main-project-icons {
+  align-self: end;
+  justify-self: end;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+}
+
+.project-icon {
+  height: 20px;
+  width: 20px;
+}
+
+.main-content-right {
+  display: grid;
+  grid-template-rows: 0.1fr 4fr 0.1fr 3fr;
+  
+}
+.announcements {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  padding: 10px 15px 20px 15px;
+  
+  
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.announcement {
+  font-size: .8rem;
+  font-weight: 400;
+  padding: 15px 5px;
+}
+
+.announcement-border {
+  border-bottom: 1px solid black;
 }
