--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,7 @@ header {
   grid-template-columns: 2.1fr 1fr;
   grid-template-rows: 1.5fr 2fr;
   padding-left: 30px;
-  
-  
+  gap: 25px;
 }
 
 .header-top-left {
@@ -224,7 +223,8 @@ button:active {
   display: grid;
   grid-template-columns: 3fr 1.5fr;
   grid-template-rows: auto;
-  padding: 25px 0;
+  padding: 25px;
+  padding-bottom: 50px;
   gap: 25px;
 }
 
@@ -234,7 +234,7 @@ button:active {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: .1fr 1fr 1fr 1fr;
   height: 100%;
-  gap: 25px;
+  gap: 15px;
   margin-left: 25px;
 }
 
@@ -273,7 +273,7 @@ button:active {
 }
 
 .main-project-text p {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   color: rgb(58, 58, 58);
   font-weight: 500;
 }
@@ -296,25 +296,65 @@ button:active {
 .main-content-right {
   display: grid;
   grid-template-rows: 0.1fr 4fr 0.1fr 3fr;
-  
+  height: 100%;
 }
 .announcements {
   background-color: white;
-  border-radius: 10px;
+  border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   padding: 10px 15px 20px 15px;
   
-  
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+
+  margin-top: 15px;
 }
 
 .announcement {
-  font-size: .8rem;
+  font-size: .9rem;
   font-weight: 400;
   padding: 15px 5px;
+}
+
+.announcement p {
+  font-size: .8rem;
+  color: rgb(58, 58, 58);
+  font-weight: 500;
 }
 
 .announcement-border {
   border-bottom: 1px solid black;
 }
+.main-content-trending-title {
+  grid-column: span 2;
+  font-weight: 700;
+  margin-top: 30px; 
+}
+
+.trendings {
+  background-color: white;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  margin-top: 10px;
+  padding: 10px 15px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.trending {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  gap: 10px;
+}
+.trending-text {
+  font-weight: 500;
+  font-size: 0.8rem;
+  color: rgb(58, 58, 58);
+}
+.profile {
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+
